--- a/ImpresionLicencias.csproj
+++ b/ImpresionLicencias.csproj
@@ -78,6 +78,8 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
+    <Reference Include="System.Net" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
@@ -96,6 +98,12 @@
     </Compile>
     <Compile Include="frmConsulta.Designer.cs">
       <DependentUpon>frmConsulta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmInterfazWEB.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmInterfazWEB.Designer.cs">
+      <DependentUpon>frmInterfazWEB.cs</DependentUpon>
     </Compile>
     <Compile Include="Printing\Artifacts.cs" />
     <Compile Include="CardModel.cs" />
@@ -118,6 +126,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmConsulta.resx">
       <DependentUpon>frmConsulta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmInterfazWEB.resx">
+      <DependentUpon>frmInterfazWEB.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -152,6 +163,8 @@
     <Content Include="msvcr100d.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\printerOFF.png" />
+    <None Include="Resources\printerON.png" />
     <None Include="Resources\qrcode.jpg" />
     <None Include="Resources\descarga.png" />
     <None Include="Resources\FINGERPRINT.jpg" />
